--- a/Audit Office/css/index.css
+++ b/Audit Office/css/index.css
@@ -63,24 +63,31 @@ a{
 a:hover{
   color: #09AC99!important;
 }
+body{
+  background-color: #F7F7F7;
+}
 
 div.boxpainel{
   width: 100%;
   height: 1000px;
-  border: 1px solid;
-  color: #FFFFAF;
-  background-color: #FFFFAF;
+  background-color: #F7F7F7;
+  
+  
 }
 div.input-municipio{
   color:#000000;
   width: 200px;
   margin-left: 600px;
-  margin-top: 400px;
+  margin-top: auto;
+  padding: 10px;
+
 }
 div.input-setor{
   color:#000000;
   width: 200px;
-  margin-left: 600px;
+  margin-left: 240px;
+  margin-top: -26px;
+  
 }
  input{
    background-color: #09AC99;
@@ -94,10 +101,28 @@ div.inputs{
   width: 800px;
   margin-right: auto;
   border: 1px solid;
+  border-color:#F7F7F7;;
 }
 ::placeholder{
   color: #FFFFFF;
 }
 ::placeholder:hover{
   color: #09AC99;
+}
+
+.buscar{
+  width: 200px;
+  margin-left: 120px;
+  margin-top: 25px;
+  font-weight: bold;
+ 
+}
+.botao{
+  width: 200px;
+}
+.lgo{
+ width:400px ;
+ margin-left: 635px;
+ margin-top: 200px;
+
 }
